--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 
   <body>
     <!-- header design -->
+    <header class="header">
+        <a href="#" class="logo">Ashik.</a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
     <!-- home section design -->
 
