--- a/index.html
+++ b/index.html
@@ -18,20 +18,50 @@
   <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Ashik.</a>
+      <a href="#" class="logo">Ashik.</a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+      <div class="bx bx-menu" id="menu-icon"></div>
 
-        <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
 
     <!-- home section design -->
+    <section class="home" id="home">
+      <div class="home-content">
+        <h1>Hi, I'm <span>Md. Ashikur Rahman Ashik</span></h1>
+        <div class="text-animate">
+          <h3>Frontend Developer</h3>
+        </div>
+        <p>
+          👋 Greetings! I&apos;m Md. Ashikur Rahman Ashik, a web enthusiast
+          hailing from Bangladesh. I dive deep into both front-end and back-end
+          realms, sculpting captivating digital experiences. My passion lies in
+          transforming ideas into sleek, efficient code. Let&apos;s connect and
+          craft something extraordinary together! Happy coding! 🚀
+        </p>
+        <div class="btn-box">
+          <a href="#" class="btn">Hire Me</a>
+          <a href="#" class="btn">Let's Talk</a>
+        </div>
+      </div>
+
+      <div class="home-sci">
+        <a href="#"><i class="bx bx-envelope"></i></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-github"></i></a>
+      </div>
+
+      <div class="home-imgHover"></div>
+    </section>
 
     <!-- about section design -->
 
