added about section image, text & button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
     </section>
 
     <!-- about section design -->
+    <section class="about" id="about">
+      <h2 class="heading">About <span>Me</span></h2>
+
+      <div class="about-img">
+        <img src="/images/about.jpg" alt="" />
+        <!-- <img src="/images/1685104926074.jpg" alt=""> -->
+        <!-- <img src="/images/photo_2023-12-25_10-14-36.jpg" alt=""> -->
+        <img src="/images/profile.jpg" alt="" />
+        <!-- <img src="/images/profile_another.jpg" alt=""> -->
+        <!-- <img src="/images/profile_high.jpg" alt=""> -->
+        <span class="circle-spin"></span>
+      </div>
+
+      <div class="about-content">
+        <h3>Frontend Developer!</h3>
+        <p>
+          Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
+          at Daffodil International University. Currently residing in Dhaka,
+          Bangladesh. I&apos;m fueled by a passion for web development,
+          specializing in both front-end and back-end technologies. My journey
+          revolves around turning ideas into compelling, functional code. Eager
+          to contribute and learn in a dynamic team environment, bringing value
+          through my coding prowess.
+        </p>
+
+        <div class="btn-box btns">
+            <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
 
     <!-- education section design -->
 
