updated about me section styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="home-content">
         <h1>Hi, I'm <span>Md. Ashikur Rahman Ashik</span></h1>
         <div class="text-animate">
-          <h3>Frontend Developer</h3>
+          <h3>Full Stack Web Developer</h3>
         </div>
         <p>
           👋 Greetings! I&apos;m Md. Ashikur Rahman Ashik, a web enthusiast
@@ -68,17 +68,18 @@
       <h2 class="heading">About <span>Me</span></h2>
 
       <div class="about-img">
-        <img src="/images/about.jpg" alt="" />
+        <!-- <img src="/images/about.jpg" alt="" /> -->
         <!-- <img src="/images/1685104926074.jpg" alt=""> -->
         <!-- <img src="/images/photo_2023-12-25_10-14-36.jpg" alt=""> -->
-        <img src="/images/profile.jpg" alt="" />
+        <!-- <img src="/images/profile.jpg" alt="" /> -->
         <!-- <img src="/images/profile_another.jpg" alt=""> -->
         <!-- <img src="/images/profile_high.jpg" alt=""> -->
+        <img src="/images/another.jpg" alt="">
         <span class="circle-spin"></span>
       </div>
 
       <div class="about-content">
-        <h3>Frontend Developer!</h3>
+        <h3>Full Stack Web Developer!</h3>
         <p>
           Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
           at Daffodil International University. Currently residing in Dhaka,
