--- a/index.html
+++ b/index.html
@@ -97,6 +97,41 @@
     </section>
 
     <!-- education section design -->
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Journey</span></h2>
+
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2015 - 2017</div>
+                            <h3>SSC</h3>
+                            <p>B.L</p>
+                        </div>
+                    </div>
+                    
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2017 - 2019</div>
+                            <h3>HSC</h3>
+                            <p>MGC</p>
+                        </div>
+                    </div>
+                    
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2020 - Present</div>
+                            <h3>B.Sc in CSE</h3>
+                            <p>Daffodil International University</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- skills section design -->
 
