--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2015 - 2017</div>
-                            <h3>SSC</h3>
-                            <p>B.L</p>
+                            <h3>Secondary School Certificate</h3>
+                            <p>B.L Govt. High School</p>
                         </div>
                     </div>
                     
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2017 - 2019</div>
-                            <h3>HSC</h3>
-                            <p>MGC</p>
+                            <h3>Higher Secondary Certificate</h3>
+                            <p>Mohammadpur Govt. College</p>
                         </div>
                     </div>
                     
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2020 - Present</div>
-                            <h3>B.Sc in CSE</h3>
+                            <h3>B.Sc in Computer Science and Engineering</h3>
                             <p>Daffodil International University</p>
                         </div>
                     </div>
