added resume and updated my social links

--- a/index.html
+++ b/index.html
@@ -46,18 +46,36 @@
           craft something extraordinary together! Happy coding! 🚀
         </p>
         <div class="btn-box">
-          <a href="#" class="btn">Hire Me</a>
-          <a href="#" class="btn">Let's Talk</a>
+          <a href="/resume/resume_ashik.pdf" class="btn">Resume</a>
+          <a href="https://wa.me/qr/X3TE2Q2RB277F1" target="_blank" class="btn"
+            >Let's Talk</a
+          >
         </div>
       </div>
 
       <div class="home-sci">
-        <a href="#"><i class="bx bx-envelope"></i></a>
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="mailto:ashikurrahman.8october@gmail.com" target="_blank"
+          ><i class="bx bx-envelope"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/ashikurrahman.ashik.568632"
+          target="_blank"
+          ><i class="bx bxl-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com/a_s_h_i_k_8" target="_blank"
+          ><i class="bx bxl-instagram"></i
+        ></a>
+        <a href="https://twitter.com/ashikurrahman81" target="_blank"
+          ><i class="bx bxl-twitter"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/md-ashikur-rahman-ashik-1b51231a3"
+          target="_blank"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
+        <a href="https://github.com/ashik-08" target="_blank"
+          ><i class="bx bxl-github"></i
+        ></a>
       </div>
 
       <div class="home-imgHover"></div>
@@ -74,7 +92,7 @@
         <!-- <img src="/images/profile.jpg" alt="" /> -->
         <!-- <img src="/images/profile_another.jpg" alt=""> -->
         <!-- <img src="/images/profile_high.jpg" alt=""> -->
-        <img src="/images/another.jpg" alt="">
+        <img src="/images/another.jpg" alt="" />
         <span class="circle-spin"></span>
       </div>
 
@@ -91,46 +109,52 @@
         </p>
 
         <div class="btn-box btns">
-            <a href="#" class="btn">Read More</a>
+          <a href="#" class="btn">Read More</a>
         </div>
       </div>
     </section>
 
     <!-- education section design -->
     <section class="education" id="education">
-        <h2 class="heading">My <span>Journey</span></h2>
+      <h2 class="heading">My <span>Journey</span></h2>
 
-        <div class="education-row">
-            <div class="education-column">
-                <h3 class="title">Education</h3>
+      <div class="education-row">
+        <div class="education-column">
+          <h3 class="title">Education</h3>
 
-                <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2015 - 2017</div>
-                            <h3>Secondary School Certificate</h3>
-                            <p>B.L Govt. High School</p>
-                        </div>
-                    </div>
-                    
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2017 - 2019</div>
-                            <h3>Higher Secondary Certificate</h3>
-                            <p>Mohammadpur Govt. College</p>
-                        </div>
-                    </div>
-                    
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2020 - Present</div>
-                            <h3>B.Sc in Computer Science and Engineering</h3>
-                            <p>Daffodil International University</p>
-                        </div>
-                    </div>
+          <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2015 - 2017
                 </div>
+                <h3>Secondary School Certificate</h3>
+                <p>B.L Govt. High School</p>
+              </div>
             </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2019
+                </div>
+                <h3>Higher Secondary Certificate</h3>
+                <p>Mohammadpur Govt. College</p>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2020 - Present
+                </div>
+                <h3>B.Sc in Computer Science and Engineering</h3>
+                <p>Daffodil International University</p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- skills section design -->
