updated small changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo">Ashik.</a>
+      <a href="#" class="logo"><span>Ash</span>ik.</a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -130,6 +130,7 @@
                 </div>
                 <h3>Secondary School Certificate</h3>
                 <p>B.L Govt. High School</p>
+                <p>Sirajganj</p>
               </div>
             </div>
 
@@ -140,6 +141,7 @@
                 </div>
                 <h3>Higher Secondary Certificate</h3>
                 <p>Mohammadpur Govt. College</p>
+                <p>Dhaka</p>
               </div>
             </div>
 
@@ -150,6 +152,7 @@
                 </div>
                 <h3>B.Sc in Computer Science and Engineering</h3>
                 <p>Daffodil International University</p>
+                <p>Dhaka</p>
               </div>
             </div>
           </div>
