--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
   <body>
     <!-- header design -->
     <header class="header">
-      <a href="#" class="logo"><span>Ash</span>ik.</a>
+      <a href="#" class="logo"
+        ><span>Ash</span><span class="animate" style="--i: 1"></span>ik.</a
+      >
 
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <div class="bx bx-menu" id="menu-icon">
+        <span class="animate" style="--i: 2"></span>
+      </div>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -30,15 +34,20 @@
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
+        <span class="animate" style="--i: 2"></span>
       </nav>
     </header>
 
     <!-- home section design -->
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
       <div class="home-content">
-        <h1>Hi, I'm <span>Md. Ashikur Rahman Ashik</span></h1>
+        <h1>
+          Hi, I'm <span>Md. Ashikur Rahman Ashik</span
+          ><span class="animate" style="--i: 2"></span>
+        </h1>
         <div class="text-animate">
           <h3>Full Stack Web Developer</h3>
+          <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           👋 Greetings! I&apos;m Md. Ashikur Rahman Ashik, a web enthusiast
@@ -46,12 +55,14 @@
           realms, sculpting captivating digital experiences. My passion lies in
           transforming ideas into sleek, efficient code. Let&apos;s connect and
           craft something extraordinary together! Happy coding! 🚀
+          <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
           <a href="/resume/resume_ashik.pdf" class="btn">Resume</a>
           <a href="https://wa.me/qr/X3TE2Q2RB277F1" target="_blank" class="btn"
             >Let's Talk</a
           >
+          <span class="animate" style="--i: 4"></span>
         </div>
       </div>
 
@@ -78,14 +89,18 @@
         <a href="https://github.com/ashik-08" target="_blank"
           ><i class="bx bxl-github"></i
         ></a>
+        <span class="animate" style="--i: 5"></span>
       </div>
 
       <div class="home-imgHover"></div>
+      <span class="animate home-img" style="--i: 6"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-      <h2 class="heading">About <span>Me</span></h2>
+      <h2 class="heading">
+        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="about-img">
         <!-- <img src="/images/about.jpg" alt="" /> -->
@@ -96,10 +111,16 @@
         <!-- <img src="/images/profile_high.jpg" alt=""> -->
         <img src="/images/another.jpg" alt="" />
         <span class="circle-spin"></span>
+        <span class="animate scroll" style="--i: 2"></span>
       </div>
 
       <div class="about-content">
-        <h3>Full Stack Web Developer!</h3>
+        <h3>
+          Full Stack Web Developer!<span
+            class="animate scroll"
+            style="--i: 3"
+          ></span>
+        </h3>
         <p>
           Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
           at Daffodil International University. Currently residing in Dhaka,
@@ -108,21 +129,28 @@
           revolves around turning ideas into compelling, functional code. Eager
           to contribute and learn in a dynamic team environment, bringing value
           through my coding prowess.
+          <span class="animate scroll" style="--i: 4"></span>
         </p>
 
         <div class="btn-box btns">
           <a href="#" class="btn">Read More</a>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
       </div>
     </section>
 
     <!-- education section design -->
     <section class="education" id="education">
-      <h2 class="heading">My <span>Journey</span></h2>
+      <h2 class="heading">
+        My <span>Journey</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="education-row">
         <div class="education-column">
-          <h3 class="title">Education</h3>
+          <h3 class="title">
+            Education<span class="animate scroll" style="--i: 2"></span>
+          </h3>
 
           <div class="education-box">
             <div class="education-content">
@@ -157,6 +185,8 @@
                 <p>Dhaka</p>
               </div>
             </div>
+
+            <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
       </div>
@@ -164,12 +194,17 @@
 
     <!-- skills section design -->
     <section class="skills" id="skills">
-      <h2 class="heading">My <span>Skills</span></h2>
+      <h2 class="heading">
+        My <span>Skills</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <div class="skills-row">
         <!-- Front-end -->
         <div class="skills-column">
-          <h3 class="title">Front-end</h3>
+          <h3 class="title">
+            Front-end<span class="animate scroll" style="--i: 2"></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -198,12 +233,16 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+
+            <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
 
         <!-- Back-end -->
         <div class="skills-column">
-          <h3 class="title">Back-end</h3>
+          <h3 class="title">
+            Back-end<span class="animate scroll" style="--i: 4"></span>
+          </h3>
 
           <div class="skills-box">
             <div class="skills-content">
@@ -227,6 +266,8 @@
                 <div class="bar"><span></span></div>
               </div>
             </div>
+
+            <span class="animate scroll" style="--i: 5"></span>
           </div>
         </div>
       </div>
@@ -234,7 +275,10 @@
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">
+        Contact <span>Me!</span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
 
       <form action="#">
         <div class="input-box">
@@ -246,6 +290,8 @@
             <input type="text" placeholder="Email Address" required />
             <span class="focus"></span>
           </div>
+
+          <span class="animate scroll" style="--i: 2"></span>
         </div>
 
         <div class="input-box">
@@ -257,6 +303,8 @@
             <input type="text" placeholder="Email Subject" required />
             <span class="focus"></span>
           </div>
+
+          <span class="animate scroll" style="--i: 3"></span>
         </div>
 
         <div class="textarea-field">
@@ -269,10 +317,13 @@
             required
           ></textarea>
           <span class="focus"></span>
+
+          <span class="animate scroll" style="--i: 4"></span>
         </div>
 
         <div class="btn-box btns">
           <button type="submit" class="btn">Submit</button>
+          <span class="animate scroll" style="--i: 5"></span>
         </div>
       </form>
     </section>
@@ -281,10 +332,14 @@
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2023 by Ashikur Rahman | All Rights Reserved.</p>
+
+        <span class="animate scroll" style="--i: 1"></span>
       </div>
 
       <div class="footer-iconTop">
         <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+
+        <span class="animate scroll" style="--i: 2"></span>
       </div>
     </footer>
 
