added formspree for my contact form tracking

--- a/index.html
+++ b/index.html
@@ -280,14 +280,19 @@
         ><span class="animate scroll" style="--i: 1"></span>
       </h2>
 
-      <form action="#">
+      <form action="https://formspree.io/f/myyrgvrw" method="POST">
         <div class="input-box">
           <div class="input-field">
-            <input type="text" placeholder="Full Name" required />
+            <input type="text" placeholder="Full Name" name="name" required />
             <span class="focus"></span>
           </div>
           <div class="input-field">
-            <input type="text" placeholder="Email Address" required />
+            <input
+              type="text"
+              placeholder="Email Address"
+              name="email"
+              required
+            />
             <span class="focus"></span>
           </div>
 
@@ -296,11 +301,21 @@
 
         <div class="input-box">
           <div class="input-field">
-            <input type="number" placeholder="Mobile Number" required />
+            <input
+              type="number"
+              placeholder="Mobile Number"
+              name="mobile"
+              required
+            />
             <span class="focus"></span>
           </div>
           <div class="input-field">
-            <input type="text" placeholder="Email Subject" required />
+            <input
+              type="text"
+              placeholder="Email Subject"
+              name="subject"
+              required
+            />
             <span class="focus"></span>
           </div>
 
@@ -309,7 +324,7 @@
 
         <div class="textarea-field">
           <textarea
-            name=""
+            name="message"
             id=""
             cols="30"
             rows="10"
