added resume link, favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Ashik</title>
+    <link
+      rel="shortcut icon"
+      href="./images/portfolio-96.png"
+      type="image/x-icon"
+    />
+    <title>Portfolio | Ashikur Rahman</title>
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -58,7 +63,12 @@
           <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
-          <a href="/resume/resume_ashik.pdf" class="btn">Resume</a>
+          <a
+            href="https://github.com/ashik-08/ashik-portfolio-basic/blob/main/resume/resume_ashik.pdf"
+            download=""
+            class="btn"
+            >Resume</a
+          >
           <a href="https://wa.me/qr/X3TE2Q2RB277F1" target="_blank" class="btn"
             >Let's Talk</a
           >
@@ -103,13 +113,7 @@
       </h2>
 
       <div class="about-img">
-        <!-- <img src="/images/about.jpg" alt="" /> -->
-        <!-- <img src="/images/1685104926074.jpg" alt=""> -->
-        <!-- <img src="/images/photo_2023-12-25_10-14-36.jpg" alt=""> -->
-        <!-- <img src="/images/profile.jpg" alt="" /> -->
-        <!-- <img src="/images/profile_another.jpg" alt=""> -->
-        <!-- <img src="/images/profile_high.jpg" alt=""> -->
-        <img src="/images/another.jpg" alt="" />
+        <img src="./images/profile.jpg" alt="" />
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i: 2"></span>
       </div>
