--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
@@ -274,6 +275,41 @@
             <span class="animate scroll" style="--i: 5"></span>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- project section design -->
+    <section class="projects" id="projects">
+      <h2 class="heading">
+        My <span>Projects</span>
+        <!-- <span class="animate scroll" style="--i: 1"></span> -->
+      </h2>
+
+      <div class="projects-box">
+        <figure>
+          <img src="./images/project1.png" alt="" />
+          <figcaption>
+            <a href="https://a12-contest-hub.web.app/">Live site</a>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./images/project2.png" alt="" />
+          <figcaption>
+            <a href="https://a11-flavor-fusion.web.app/">Live site</a>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./images/project3.png" alt="" />
+          <figcaption>
+            <a href="https://a10-gearshift-autos.web.app/">Live site</a>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./images/project4.png" alt="" />
+          <figcaption>
+            <a href="https://sync-task.surge.sh/">Live site</a>
+          </figcaption>
+        </figure>
       </div>
     </section>
 
