updated resume download and contact section animation

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         </p>
         <div class="btn-box">
           <a
-            href="https://github.com/ashik-08/ashik-portfolio-basic/blob/main/resume/resume_ashik.pdf"
-            download=""
+            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/resume_ashik.pdf"
             class="btn"
             >Resume</a
           >
