--- a/index.html
+++ b/index.html
@@ -319,17 +319,18 @@
         ><span class="animate scroll" style="--i: 1"></span>
       </h2>
 
-      <form action="https://formspree.io/f/myyrgvrw" method="POST">
+      <!-- <form id="my-form" action="https://formspree.io/f/xgegwbyz" method="POST"> test form -->
+      <form id="my-form" action="https://formspree.io/f/myyrgvrw" method="POST">
         <div class="input-box">
           <div class="input-field">
-            <input type="text" placeholder="Full Name" name="name" required />
+            <input type="text" placeholder="Full Name" name="Name" required />
             <span class="focus"></span>
           </div>
           <div class="input-field">
             <input
               type="text"
               placeholder="Email Address"
-              name="email"
+              name="Email"
               required
             />
             <span class="focus"></span>
@@ -343,7 +344,7 @@
             <input
               type="number"
               placeholder="Mobile Number"
-              name="mobile"
+              name="Mobile"
               required
             />
             <span class="focus"></span>
@@ -352,7 +353,7 @@
             <input
               type="text"
               placeholder="Email Subject"
-              name="subject"
+              name="Subject"
               required
             />
             <span class="focus"></span>
@@ -363,7 +364,7 @@
 
         <div class="textarea-field">
           <textarea
-            name="message"
+            name="Message"
             id=""
             cols="30"
             rows="10"
@@ -398,5 +399,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.js"></script>
   </body>
 </html>
