--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
           ><span class="animate" style="--i: 2"></span>
         </h1>
         <div class="text-animate">
-          <h3>Full Stack Web Developer</h3>
+          <h3>Front-End Web Developer</h3>
           <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           👋 Greetings! I&apos;m Md. Ashikur Rahman Ashik, a web enthusiast
-          hailing from Bangladesh. I dive deep into both front-end and back-end
-          realms, sculpting captivating digital experiences. My passion lies in
-          transforming ideas into sleek, efficient code. Let&apos;s connect and
-          craft something extraordinary together! Happy coding! 🚀
+          hailing from Bangladesh. I dive deep into front-end and have a solid
+          grasp on back-end technologies, sculpting captivating digital
+          experiences. My passion lies in transforming ideas into sleek,
+          efficient code. Let&apos;s connect and craft something extraordinary
+          together! Happy coding! 🚀
           <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
           <a
-            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/resume_ashik.pdf"
+            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/resume_ashik_(updated).pdf"
             class="btn"
             >Resume</a
           >
@@ -120,7 +121,7 @@
 
       <div class="about-content">
         <h3>
-          Full Stack Web Developer!<span
+          Front-End Web Developer!<span
             class="animate scroll"
             style="--i: 3"
           ></span>
@@ -129,10 +130,10 @@
           Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
           at Daffodil International University. Currently residing in Dhaka,
           Bangladesh. I&apos;m fueled by a passion for web development,
-          specializing in both front-end and back-end technologies. My journey
-          revolves around turning ideas into compelling, functional code. Eager
-          to contribute and learn in a dynamic team environment, bringing value
-          through my coding prowess.
+          specializing in front-end development and have a solid understanding
+          of back-end technologies. My journey revolves around turning ideas
+          into compelling, functional code. Eager to contribute and learn in a
+          dynamic team environment, bringing value through my coding prowess.
           <span class="animate scroll" style="--i: 4"></span>
         </p>
 
@@ -223,7 +224,7 @@
               </div>
 
               <div class="progress">
-                <h3>Tailwind CSS <span>80%</span></h3>
+                <h3>Tailwind CSS <span>85%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
@@ -233,7 +234,7 @@
               </div>
 
               <div class="progress">
-                <h3>React.js <span>70%</span></h3>
+                <h3>React.js <span>80%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
@@ -251,22 +252,22 @@
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>Node.js <span>60%</span></h3>
+                <h3>Node.js <span>40%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Express.js <span>60%</span></h3>
+                <h3>Express.js <span>35%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Firebase <span>70%</span></h3>
+                <h3>Firebase <span>55%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>MongoDB <span>60%</span></h3>
+                <h3>MongoDB <span>40%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
