--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </p>
         <div class="btn-box">
           <a
-            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/resume_ashik_(updated).pdf"
+            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/Resume of Ashikur Rahman.pdf"
             class="btn"
             >Resume</a
           >
@@ -93,7 +93,7 @@
           ><i class="bx bxl-twitter"></i
         ></a>
         <a
-          href="https://www.linkedin.com/in/md-ashikur-rahman-ashik-1b51231a3"
+          href="https://www.linkedin.com/in/ashik08"
           target="_blank"
           ><i class="bx bxl-linkedin"></i
         ></a>
@@ -387,7 +387,7 @@
     <!-- footer design -->
     <footer class="footer">
       <div class="footer-text">
-        <p>Copyright &copy; 2023 by Ashikur Rahman | All Rights Reserved.</p>
+        <p>Copyright &copy; 2024 by Ashikur Rahman | All Rights Reserved.</p>
 
         <span class="animate scroll" style="--i: 1"></span>
       </div>
