[feat](main): update about me section
  - update about me text

--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
         <a href="https://twitter.com/ashikurrahman81" target="_blank"
           ><i class="bx bxl-twitter"></i
         ></a>
-        <a
-          href="https://www.linkedin.com/in/ashik08"
-          target="_blank"
+        <a href="https://www.linkedin.com/in/ashik08" target="_blank"
           ><i class="bx bxl-linkedin"></i
         ></a>
         <a href="https://github.com/ashik-08" target="_blank"
@@ -129,11 +127,17 @@
         <p>
           Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
           at Daffodil International University. Currently residing in Dhaka,
-          Bangladesh. I&apos;m fueled by a passion for web development,
-          specializing in front-end development and have a solid understanding
-          of back-end technologies. My journey revolves around turning ideas
-          into compelling, functional code. Eager to contribute and learn in a
-          dynamic team environment, bringing value through my coding prowess.
+          Bangladesh. I&apos;m passionate about web development, specializing in
+          front-end technologies with a solid understanding of back-end systems.
+          I focus on clean, efficient and well-documented code following
+          industry best practices including proper Git commit habits and
+          comprehensive README files. My designs are minimalistic yet visually
+          compelling, adhering to global color standards. I&apos;m constantly
+          learning and staying updated with new technologies, actively engaging
+          with the updated documentation to deepen my expertise. Familiar with
+          Agile methodologies especially Scrum and Sprints. I thrive in dynamic
+          team environments where I can contribute, learn and innovate to add
+          value.
           <span class="animate scroll" style="--i: 4"></span>
         </p>
 
