[refactor]: enhance project section layout and update project details

--- a/index.html
+++ b/index.html
@@ -286,32 +286,106 @@
     <section class="projects" id="projects">
       <h2 class="heading">
         My <span>Projects</span>
-        <!-- <span class="animate scroll" style="--i: 1"></span> -->
+        <span class="animate scroll" style="--i: 1"></span>
       </h2>
 
       <div class="projects-box">
-        <figure>
-          <img src="./images/project1.png" alt="" />
+        <figure class="project-item">
+          <img src="./images/contestHub.png" alt="Contest Hub" />
           <figcaption>
-            <a href="https://a12-contest-hub.web.app/">Live site</a>
+            <h3>Contest Hub</h3>
+            <p>A platform to manage and participate in various contests.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, Mongoose
+            </p>
+            <a href="https://a12-contest-hub.web.app/" target="_blank"
+              >Live site</a
+            >
           </figcaption>
         </figure>
-        <figure>
-          <img src="./images/project2.png" alt="" />
+        <figure class="project-item">
+          <img src="./images/flavorFusion.png" alt="Flavor Fusion" />
           <figcaption>
-            <a href="https://a11-flavor-fusion.web.app/">Live site</a>
+            <h3>Flavor Fusion</h3>
+            <p>A website to manage food items and then order them.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, MongoDB
+            </p>
+            <a href="https://a11-flavor-fusion.web.app/" target="_blank"
+              >Live site</a
+            >
           </figcaption>
         </figure>
-        <figure>
-          <img src="./images/project3.png" alt="" />
+        <figure class="project-item">
+          <img src="./images/gearShift.png" alt="Gearshift Autos" />
           <figcaption>
-            <a href="https://a10-gearshift-autos.web.app/">Live site</a>
+            <h3>Gearshift Autos</h3>
+            <p>An online platform for buying and selling cars.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, MongoDB
+            </p>
+            <a href="https://a10-gearshift-autos.web.app/" target="_blank"
+              >Live site</a
+            >
           </figcaption>
         </figure>
-        <figure>
-          <img src="./images/project4.png" alt="" />
+        <figure class="project-item">
+          <img src="./images/syncTask.png" alt="Sync Task" />
           <figcaption>
-            <a href="https://sync-task.surge.sh/">Live site</a>
+            <h3>Sync Task</h3>
+            <p>A task management tool to organize and track your tasks.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, MongoDB
+            </p>
+            <a href="https://sync-task.surge.sh/" target="_blank">Live site</a>
+          </figcaption>
+        </figure>
+        <figure class="project-item">
+          <img src="./images/real-estate.png" alt="Real Estate" />
+          <figcaption>
+            <h3>Real Estate</h3>
+            <p>A platform for real estate listings and property management.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a1-real-estate.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <figure class="project-item">
+          <img src="./images/expense-tracker.png" alt="Expense Tracker" />
+          <figcaption>
+            <h3>Expense Tracker</h3>
+            <p>An application to track and manage your expenses.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a2-expense-tracker.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <figure class="project-item">
+          <img src="./images/project-manager.png" alt="Project Manager" />
+          <figcaption>
+            <h3>Project Manager</h3>
+            <p>A tool to manage and track project progress.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a3-project-manager.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <figure class="project-item">
+          <img src="./images/product-list.png" alt="Product List" />
+          <figcaption>
+            <h3>Product List</h3>
+            <p>An application to list and manage products.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a4-product-list.vercel.app/" target="_blank"
+              >Live site</a
+            >
           </figcaption>
         </figure>
       </div>
