[feat]: add new projects to portfolio and update resume details

--- a/index.html
+++ b/index.html
@@ -388,6 +388,33 @@
             >
           </figcaption>
         </figure>
+        <figure class="project-item">
+          <img src="./images/alpha-clash-pro.png" alt="Alpha Clash Pro" />
+          <figcaption>
+            <h3>Alpha Clash Pro</h3>
+            <p>An application to increase your typing skill.</p>
+            <p><strong>Technologies:</strong> HTML, Tailwind CSS, JavaScript</p>
+            <a
+              href="https://ashik-08.github.io/alphabet-clash-pro"
+              target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <figure class="project-item">
+          <img src="./images/trippie.png" alt="Trippie" />
+          <figcaption>
+            <h3>Trippie</h3>
+            <p>A tour and travel management application.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, Mongoose
+            </p>
+            <a href="https://trippie-app-client.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
       </div>
     </section>
 
