[feat]: update resume, enhance role display and add new projects to portfolio

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           ><span class="animate" style="--i: 2"></span>
         </h1>
         <div class="text-animate">
-          <h3>Front-End Web Developer</h3>
+          <h3
+            data-roles="Software Engineer,  Web Developer, MERN Stack Developer, React Developer, Front-End Web Developer"
+          ></h3>
           <span class="animate" style="--i: 3"></span>
         </div>
         <p>
@@ -66,7 +68,7 @@
         </p>
         <div class="btn-box">
           <a
-            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/Resume of Ashikur Rahman.pdf"
+            href="https://raw.githubusercontent.com/ashik-08/ashik-portfolio-basic/main/resume/Resume_Ashikur_Rahman.pdf"
             class="btn"
             >Resume</a
           >
@@ -218,12 +220,12 @@
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>HTML <span>90%</span></h3>
+                <h3>HTML <span>95%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>CSS <span>80%</span></h3>
+                <h3>CSS <span>85%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
@@ -266,12 +268,12 @@
               </div>
 
               <div class="progress">
-                <h3>Firebase <span>55%</span></h3>
+                <h3>Firebase <span>60%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>MongoDB <span>40%</span></h3>
+                <h3>MongoDB <span>50%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
@@ -290,6 +292,22 @@
       </h2>
 
       <div class="projects-box">
+        <!-- Trippie -->
+        <figure class="project-item">
+          <img src="./images/trippie.png" alt="Trippie" />
+          <figcaption>
+            <h3>Trippie</h3>
+            <p>A tour and travel management application.</p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
+              Express.js, Firebase, Mongoose
+            </p>
+            <a href="https://travel-with-trippie.web.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <!-- Contest Hub -->
         <figure class="project-item">
           <img src="./images/contestHub.png" alt="Contest Hub" />
           <figcaption>
@@ -304,6 +322,7 @@
             >
           </figcaption>
         </figure>
+        <!-- Flavor Fusion -->
         <figure class="project-item">
           <img src="./images/flavorFusion.png" alt="Flavor Fusion" />
           <figcaption>
@@ -318,6 +337,7 @@
             >
           </figcaption>
         </figure>
+        <!-- Gearshift Autos -->
         <figure class="project-item">
           <img src="./images/gearShift.png" alt="Gearshift Autos" />
           <figcaption>
@@ -332,6 +352,7 @@
             >
           </figcaption>
         </figure>
+        <!-- Sync Task -->
         <figure class="project-item">
           <img src="./images/syncTask.png" alt="Sync Task" />
           <figcaption>
@@ -344,50 +365,7 @@
             <a href="https://sync-task.surge.sh/" target="_blank">Live site</a>
           </figcaption>
         </figure>
-        <figure class="project-item">
-          <img src="./images/real-estate.png" alt="Real Estate" />
-          <figcaption>
-            <h3>Real Estate</h3>
-            <p>A platform for real estate listings and property management.</p>
-            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a1-real-estate.vercel.app/" target="_blank"
-              >Live site</a
-            >
-          </figcaption>
-        </figure>
-        <figure class="project-item">
-          <img src="./images/expense-tracker.png" alt="Expense Tracker" />
-          <figcaption>
-            <h3>Expense Tracker</h3>
-            <p>An application to track and manage your expenses.</p>
-            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a2-expense-tracker.vercel.app/" target="_blank"
-              >Live site</a
-            >
-          </figcaption>
-        </figure>
-        <figure class="project-item">
-          <img src="./images/project-manager.png" alt="Project Manager" />
-          <figcaption>
-            <h3>Project Manager</h3>
-            <p>A tool to manage and track project progress.</p>
-            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a3-project-manager.vercel.app/" target="_blank"
-              >Live site</a
-            >
-          </figcaption>
-        </figure>
-        <figure class="project-item">
-          <img src="./images/product-list.png" alt="Product List" />
-          <figcaption>
-            <h3>Product List</h3>
-            <p>An application to list and manage products.</p>
-            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a4-product-list.vercel.app/" target="_blank"
-              >Live site</a
-            >
-          </figcaption>
-        </figure>
+        <!-- Alpha Clash Pro -->
         <figure class="project-item">
           <img src="./images/alpha-clash-pro.png" alt="Alpha Clash Pro" />
           <figcaption>
@@ -401,16 +379,50 @@
             >
           </figcaption>
         </figure>
+        <!-- Real Estate -->
         <figure class="project-item">
-          <img src="./images/trippie.png" alt="Trippie" />
+          <img src="./images/real-estate.png" alt="Real Estate" />
           <figcaption>
-            <h3>Trippie</h3>
-            <p>A tour and travel management application.</p>
-            <p>
-              <strong>Technologies:</strong> React.js, Tailwind CSS, Node.js,
-              Express.js, Firebase, Mongoose
-            </p>
-            <a href="https://trippie-app-client.vercel.app/" target="_blank"
+            <h3>Real Estate</h3>
+            <p>A platform for real estate listings and property management.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a1-real-estate.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <!-- Expense Tracker -->
+        <figure class="project-item">
+          <img src="./images/expense-tracker.png" alt="Expense Tracker" />
+          <figcaption>
+            <h3>Expense Tracker</h3>
+            <p>An application to track and manage your expenses.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a2-expense-tracker.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <!-- Project Manager -->
+        <figure class="project-item">
+          <img src="./images/project-manager.png" alt="Project Manager" />
+          <figcaption>
+            <h3>Project Manager</h3>
+            <p>A tool to manage and track project progress.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a3-project-manager.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <!-- Product List -->
+        <figure class="project-item">
+          <img src="./images/product-list.png" alt="Product List" />
+          <figcaption>
+            <h3>Product List</h3>
+            <p>An application to list and manage products.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a4-product-list.vercel.app/" target="_blank"
               >Live site</a
             >
           </figcaption>
