[feat](project): add Event Mania project and update existing project details

--- a/index.html
+++ b/index.html
@@ -365,6 +365,25 @@
             <a href="https://sync-task.surge.sh/" target="_blank">Live site</a>
           </figcaption>
         </figure>
+        <!-- Event Mania -->
+        <figure class="project-item">
+          <img src="./images/event-mania.png" alt="Event Mania" />
+          <figcaption>
+            <h3>Event Mania</h3>
+            <p>
+              A social event management platform to organize and serve different
+              social events.
+            </p>
+            <p>
+              <strong>Technologies:</strong> React.js, Tailwind CSS, Firebase
+            </p>
+            <a
+              href="https://a9-social-event-management.web.app/"
+              target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
         <!-- Alpha Clash Pro -->
         <figure class="project-item">
           <img src="./images/alpha-clash-pro.png" alt="Alpha Clash Pro" />
@@ -379,26 +398,14 @@
             >
           </figcaption>
         </figure>
-        <!-- Real Estate -->
+        <!-- Product List -->
         <figure class="project-item">
-          <img src="./images/real-estate.png" alt="Real Estate" />
+          <img src="./images/product-list.png" alt="Product List" />
           <figcaption>
-            <h3>Real Estate</h3>
-            <p>A platform for real estate listings and property management.</p>
+            <h3>Product List</h3>
+            <p>An application to list and manage products.</p>
             <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a1-real-estate.vercel.app/" target="_blank"
-              >Live site</a
-            >
-          </figcaption>
-        </figure>
-        <!-- Expense Tracker -->
-        <figure class="project-item">
-          <img src="./images/expense-tracker.png" alt="Expense Tracker" />
-          <figcaption>
-            <h3>Expense Tracker</h3>
-            <p>An application to track and manage your expenses.</p>
-            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a2-expense-tracker.vercel.app/" target="_blank"
+            <a href="https://a4-product-list.vercel.app/" target="_blank"
               >Live site</a
             >
           </figcaption>
@@ -415,14 +422,26 @@
             >
           </figcaption>
         </figure>
-        <!-- Product List -->
+        <!-- Expense Tracker -->
         <figure class="project-item">
-          <img src="./images/product-list.png" alt="Product List" />
+          <img src="./images/expense-tracker.png" alt="Expense Tracker" />
           <figcaption>
-            <h3>Product List</h3>
-            <p>An application to list and manage products.</p>
+            <h3>Expense Tracker</h3>
+            <p>An application to track and manage your expenses.</p>
             <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
-            <a href="https://a4-product-list.vercel.app/" target="_blank"
+            <a href="https://a2-expense-tracker.vercel.app/" target="_blank"
+              >Live site</a
+            >
+          </figcaption>
+        </figure>
+        <!-- Real Estate -->
+        <figure class="project-item">
+          <img src="./images/real-estate.png" alt="Real Estate" />
+          <figcaption>
+            <h3>Real Estate</h3>
+            <p>A platform for real estate listings and property management.</p>
+            <p><strong>Technologies:</strong> Tailwind CSS, React.js</p>
+            <a href="https://a1-real-estate.vercel.app/" target="_blank"
               >Live site</a
             >
           </figcaption>
