feat: update personal details in portfolio and resume, enhance skills and experience sections

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           ></span>
         </h3>
         <p>
-          Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science undergrad
-          at Daffodil International University. Currently residing in Dhaka,
+          Hey, I&apos;m Md. Ashikur Rahman Ashik, a Computer Science graduate
+          from Daffodil International University. Currently residing in Dhaka,
           Bangladesh. I&apos;m passionate about web development, specializing in
           front-end technologies with a solid understanding of back-end systems.
           I focus on clean, efficient and well-documented code following
@@ -189,7 +189,7 @@
             <div class="education-content">
               <div class="content">
                 <div class="year">
-                  <i class="bx bxs-calendar"></i> 2020 - Present
+                  <i class="bx bxs-calendar"></i> 2020 - 2024
                 </div>
                 <h3>B.Sc in Computer Science and Engineering</h3>
                 <p>Daffodil International University</p>
@@ -523,7 +523,7 @@
     <!-- footer design -->
     <footer class="footer">
       <div class="footer-text">
-        <p>Copyright &copy; 2024 by Ashikur Rahman | All Rights Reserved.</p>
+        <p>Copyright &copy; 2025 by Ashikur Rahman | All Rights Reserved.</p>
 
         <span class="animate scroll" style="--i: 1"></span>
       </div>
